Raven.A1
Hardware and software binary release

xxxxxxxx:
  rvnova:   *temp* limit cirrus vram to 1mb
  rvbios:   prevent showing boot screen twice under MagiC

20250827:
  rom:      updated to EmuTOS 1.4
  rom:      x86 emulation bugfix
  rvnova:   Cirrus Logic GD54xx driver (blitter support)
  rvnova:   WDC90C31 driver (blitter support)
  rvnova:   OAK driver

20250808:
  rom:      layout and size optimization
  rom:      wip configspace for system settings
  firmware: (simm programmer) support for rom configspace
  rvbios:   get chipset version from bootrom
  rvnova:   generic vga driver

20250718
  rom:      improved IDE speed (4.8 -> 7.9 MB/s)
  firmware: (nessi) improved cf-card compatibility

20250627
  firmware: (nessi) ISA fix: 16-color vga modes now work

20250626
  rom:      support for ide byteswap adapter
  rom:      updated romdisk software
  rom:      create ramdisk when no hdd partition exist
  software: added ymodem serial transfer program

20250621
  rvbios:   _MCH cookie for Raven is now 0x00070000

20250620
  rom:      ckbd support
  rom:      eiffel key-repeat fix
  rom:      autorun srec programs after upload
  firmware: (ckbd) added ckbd firmware binary
  firmware: (nessi) reversed order of ram slots
  rvbios:   ET4000/W32i memory interleave setting
  rvnova:   ET4000/W32i memory interleave support

20250321
  rom:      fixed software reset from tos/mint
  firmware: (eiffel) default to scancode set 2

20250317
  drivers:  added US-ANSI keyboard table for Eiffel

20250307
  monitor:  in-system rom flashing
  software: added rom flash utility

20250215
  software: added uiptools for NE2000 ISA cards

20250208
  rom:      hi-speed serial now usable in TOS as bios device 7
  tools:    added serial.cpx for configurating serial ports

20250123
  drivers:  Aims FM-Radio ISA card

20250119
  drivers:  OPL midi driver

20250107
  rom:      ROM disk support for utilities

20241230
  rom:      fixed bug in cookie set command