@@ -4,6 +4,8 @@ Hardware and software binary release
 xxxxxxxx:
   rvnova:   *temp* limit cirrus vram to 1mb
   rvbios:   prevent showing boot screen twice under MagiC
+  software: added 3rd party fpupatch
+  software: added 3rd party xboot
 
 20250827:
   rom:      updated to EmuTOS 1.4
